Fixed colour input & outputs

--- a/index.html
+++ b/index.html
@@ -43,20 +43,24 @@
 
                 <!-- Outputs Colour Codes -->
                 <div class = "outputs">
-                    <p>HEX: <span class = 'hex'>##23456</span></p>
-                    <p>RGB: <span class = 'rgb'>(123, 123, 123)</span></p>
-                    <p>HSL: <span class = 'hsl'>()</span></p>
-                    <p>CMYK: <span class = 'cymk'>(0%, 0%, 0%, 0%)</span></p>
+                    <p>HEX: <span class = 'hex'>#828282</span></p>
+                    <p>RGB: <span class = 'rgb'>(130, 130, 130)</span></p>
+                    <!-- <p>HSL: <span class = 'hsl'>()</span></p>
+                    <p>CMYK: <span class = 'cymk'>(0%, 0%, 0%, 0%)</span></p> -->
 
-                    <!-- Button to save colour to Palettes Section -->
+                    <!-- Button to save colour to Palettes Section --
                     <button class = 'save'>Save Colour</button>
+                    -->
                 </div>
             </div>
 
-            <!-- Palettes Section -->
+            <!--
+            <!- Palettes Section --
             <div class = "palettes">Hello
-                <!-- Saved colour palettes will be shown here -->
+                <!- Saved colour palettes will be shown here --
             </div>
+            -->
+
         </div>
 
         <!-- JavaScript -->
