Added shades section

--- a/index.html
+++ b/index.html
@@ -46,13 +46,25 @@
             </div>
 
             <div class = "output-section">
-                <!-- Displays the Picked Colour-->
-                <div class = "display">Colour Display</div>
 
                 <div class = "outputs">
                     <p>HEX: <span class = 'hex'>#828282</span></p>
                     <p>RGB: <span class = 'rgb'>(130, 130, 130)</span></p>
                 </div>
+
+                <div class = "shades">
+                    <div class = "shades-one">Shade 1</div>
+                    <div class = "shades-two">Shade 2</div>
+                    <div class = "shades-three">Shade 3</div>
+
+                    <!-- Displays the Picked Colour-->
+                    <div class = "display"></div>
+                    
+                    <div class = "shades-four">Shade 4</div>
+                    <div class = "shades-five">Shade 5</div>
+                    <div class = "shades-six">Shade 6</div>
+                </div>
+
             </div>
 
             <!-- Footer -->
