--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- CSS Link -->
         <link rel = "stylesheet" href = "styles.css">
     </head>
-    
+
     <body>
         <div class = "container">
             <!-- Header -->
@@ -53,16 +53,20 @@
                 </div>
 
                 <div class = "shades">
-                    <div class = "shades-one">Shade 1</div>
-                    <div class = "shades-two">Shade 2</div>
-                    <div class = "shades-three">Shade 3</div>
+                    <div class = "shades1"></div>
+                    <div class = "shades2"></div>
+                    <div class = "shades3"></div>
 
                     <!-- Displays the Picked Colour-->
                     <div class = "display"></div>
                     
-                    <div class = "shades-four">Shade 4</div>
-                    <div class = "shades-five">Shade 5</div>
-                    <div class = "shades-six">Shade 6</div>
+                    <div class = "shades4"></div>
+                    <div class = "shades5"></div>
+                    <div class = "shades6"></div>
+                </div>
+
+                <div class = "lighter-darker">
+                    <p>← ← Lighter ← ← Selected Colour → → Darker → →</p>
                 </div>
 
             </div>
